# migra

./: CHANGELOG.md  LICENSE  README.md  TROUBLESHOOTING.md  docker-compose.yml  dune-project  migra.opam  migris.opam
docs/: TESTING_LOCALLY.md  TROUBLESHOOTING.md
examples/: dune  migrate_on_startup.ml
lib/: database.ml  database.mli  dialect.ml  dialect.mli  discovery.ml  discovery.mli  dune  logging.ml  logging.mli  migration.ml  migration.mli  migrator.ml  migrator.mli  runner.ml  runner.mli  sql_parser.ml  sql_parser.mli  types.ml  types.mli
lib/engine/: connection.ml  connection.mli  database.ml  database.mli  dialect.ml  dialect.mli  discovery.ml  discovery.mli  dune  logging.ml  logging.mli  migration.ml  migration.mli  runner.ml  runner.mli  sql_parser.ml  sql_parser.mli  types.ml  types.mli
migrations/: 20251231154104_create_users.sql  20251231203950_add_posts_table.sql  20260101112940_test_users.sql  20260101112957_add_profile_column.sql
test/: README.md  dune  test_database.ml  test_database_facade.ml  test_dialect.ml  test_discovery.ml  test_e2e.ml  test_helpers.ml  test_integration.ml  test_integration_mariadb.ml  test_integration_sqlite.ml  test_migration.ml  test_migrator.ml  test_runner.ml  test_schema_integration.ml  test_sql_parser.ml  test_types.ml  test_unit.ml  test_workflows.ml
test/cli/: cli.t  dune
