(library
 (name migra)
 (public_name migra)
 (private_modules connection dialect discovery migration runner sql_parser)
 (libraries
  lwt
  lwt.unix
  caqti
  caqti-lwt
  caqti-lwt.unix
  caqti-dynload
  uri
  unix
  logs
  logs.lwt
  logs.fmt
  fmt
  fmt.tty)
 (preprocess
  (pps logs-ppx)))

(include_subdirs unqualified)
